--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
 </h1>
 <ul>
     <li>
-<a href="Spēle.html">
-    Spēle
-</a>
+        <a href="Spele.html">
+            Spēle
+        </a>
     </li>
     <li>
         <a href="top.html">
             Tops
+        </a>
+    </li>
+    <li>
+        <a href="Noteikumi.html">
+            Noteikumi
         </a>
     </li>
 </ul>
