--- a/Spele.html
+++ b/Spele.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="style1.css" rel="stylesheet">
+    <link href="style1.css" rel="stylesheet"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +11,11 @@
     <div class="werapper">
 <div class="header">
 <h1>
-    <a href="index.html">
-        Vārdu Spēle
-    </a>
+    <button>
+        <a href="index.html">
+            Sākums
+        </a>
+    </button>
 </h1>
 </div>
     </div>
