--- a/Spele.html
+++ b/Spele.html
@@ -12,9 +12,20 @@
 <div class="header">
 <h1>
     <button>
-        <a href="index.html">
-            Sākums
-        </a>
+        <b>
+            <a href="index.html">
+                Sākums
+            </a>
+    </b>
+    </button>
+    <button>
+        
+      <b>
+     <a href="Noteikumi.html">
+                Noteikumi
+      </a>
+       </b>
+    
     </button>
 </h1>
 </div>
