--- a/top.html
+++ b/top.html
@@ -11,14 +11,39 @@
     <div class="wrapper">
         <div class="header">
             <h1>
-                <button>
+                <center>
+                    <button>
+                        <b>
+                            <a href="index.html">
+                                Sākums
+                            </a>
+                        </b>
+                    </button>
+                    <button>
+                        <b>
+                            <a href="Spele.html">
+                                Spēle
+                            </a>
+                        </b>
+                    </button>
+                    <button>
+                        <b>
+                            <a href="Noteikumi.html">
+                                Noteikumi
+                            </a>
+                        </b>
+                    </button>
+                </center>
+                </h1>
+            <h2>
+                <center>
+                <a>
                     <b>
-                        <a href="index.html">
-                            Sākums
-                        </a>
+                        Spēles Tops:
                     </b>
-                </button>
-            </h1>
+                </a>
+                </center>
+            </h2>
         </div>
     </div>
     
