--- a/index.html
+++ b/index.html
@@ -11,26 +11,47 @@
  <div class="wrapper" >
 <div class="header">
 <h1>
-    <a>
-        Vārdu spēle
-    </a>
+    <center>
+        <a>
+            Vārdu spēle
+        </a>
+    </center>
 </h1>
 <ul>
-    <li>
-        <a href="Spele.html">
-            Spēle
-        </a>
-    </li>
-    <li>
-        <a href="top.html">
-            Tops
-        </a>
-    </li>
-    <li>
-        <a href="Noteikumi.html">
-            Noteikumi
-        </a>
-    </li>
+    <center>
+        <li>
+            <center>
+                <button>
+                    <b>
+                        <a href="Spele.html">
+                            Spēle
+                        </a>
+                    </b>
+                </button>
+            </center>
+            
+        </li>
+        <li>
+            <button>
+                <b>
+                    <a href="top.html">
+                        Tops
+                    </a>
+                </b>
+        </button>
+        </li>
+        <li>
+            <button>
+                <b>
+                    <a href="Noteikumi.html">
+                        Noteikumi
+                    </a>
+                    
+                </b>
+            </button>
+        </li>
+
+    </center>
 </ul>
 </div>
 </div>
