--- a/Noteikumi.html
+++ b/Noteikumi.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="header">
             <h1>
-                <center>
+                <p style="text-align:center;">
                     <button>
                         <b>
                             <a href="index.html">
@@ -35,15 +35,15 @@
                         </a>
                     </b>
                 </button>
-
-                </center>
-              
+                </p>
             </h1>
             <h2>
                 <a>
                     
                 </a>
             </h2>
+                </a>
+            </p>
             <h1>
                 Noteikumi:
             </h1>
