--- a/index.html
+++ b/index.html
@@ -11,48 +11,46 @@
  <div class="wrapper" >
 <div class="header">
 <h1>
-    <center>
+    <p style="text-align:center;">
         <a>
             Vārdu spēle
         </a>
-    </center>
+    </p>
 </h1>
-<ul>
-    <center>
-        <li>
-            <center>
-                <button>
-                    <b>
-                        <a href="Spele.html">
-                            Spēle
-                        </a>
-                    </b>
-                </button>
-            </center>
-            
-        </li>
-        <li>
-            <button>
-                <b>
-                    <a href="top.html">
-                        Tops
-                    </a>
-                </b>
+<h1>
+    <p style="text-align:center;">
+        <button>
+            <b>
+                <a href="index.html">
+                    Sākums
+                </a>
+            </b>
         </button>
-        </li>
-        <li>
-            <button>
-                <b>
-                    <a href="Noteikumi.html">
-                        Noteikumi
-                    </a>
-                    
-                </b>
-            </button>
-        </li>
-
-    </center>
-</ul>
+        <button>
+            <b>
+                <a href="Spele.html">
+                    Spēle
+                </a>
+            </b>
+        </button>
+        <button>
+            <b>
+                <a href="Noteikumi.html">
+                    Noteikumi
+                </a>
+            </b>
+        </button>
+        <button>
+            <b>
+                <a href="top.html">
+                    Tops
+                </a>
+            </b>
+        </button>
+    </p>
+    </h1>
+<h2>
+</h2>
 </div>
 </div>
 
