--- a/top.html
+++ b/top.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="header">
             <h1>
-                <center>
+                <p style="text-align:center;">
                     <button>
                         <b>
                             <a href="index.html">
@@ -33,19 +33,45 @@
                             </a>
                         </b>
                     </button>
-                </center>
+                </p>
                 </h1>
             <h2>
-                <center>
-                <a>
-                    <b>
-                        Spēles Tops:
-                    </b>
-                </a>
-                </center>
+                <p style="text-align:center;">
+                    <a>
+                        <b>
+                            Spēles Tops:
+                        </b>
+                    </a>
+                </p>
             </h2>
         </div>
     </div>
-    
+    <h3>
+        <p style="text-align:center;">
+        <b>
+            <a>
+                1.Vieta
+            </a>
+        </b>
+        </p>
+    </h3>
+    <h3>
+        <p style="text-align:center;">
+        <b>
+            <a>
+              2.Vieta
+            </a>
+        </b>
+        </p>
+    </h3>
+    <h3>
+        <p style="text-align:center;">
+        <b>
+            <a>
+                3.Vieta
+            </a>
+        </b>
+        </p>
+    </h3>
 </body>
 </html>
